[package]
name = "cargo-ktstr"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cargo plugin for ktstr: kernel build + nextest in one command"
keywords = ["sched_ext", "scheduler", "testing", "cargo-plugin", "linux"]
categories = ["development-tools::testing", "development-tools::cargo-plugins"]

[features]
gha-cache = ["dep:opendal", "dep:tokio"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crc32fast = "1.5"
flate2 = "1"
gix = { version = "0.81", default-features = false, features = ["sha1", "blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "worktree-mutation", "status"] }
ktstr = { path = ".." }
libc = "0.2"
opendal = { version = "0.55", default-features = false, features = ["services-ghac"], optional = true }
reqwest = { version = "0.13", features = ["blocking"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["rt"], optional = true }
xz2 = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
