[package]
name = "cargo-stt"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "GPL-2.0-only"
repository = "https://github.com/likewhatevs/stt"
description = "Cargo subcommand for running stt scheduler tests"
keywords = ["scheduler", "testing", "cargo", "linux"]
categories = ["development-tools::cargo-plugins"]
publish = false

[[bin]]
name = "cargo-stt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "unicode", "wrap_help"] }
console = "0.15"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stt = { path = ".." }
