[package]
name = "ktstr-macros"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macro for ktstr #[ktstr_test] attribute"
keywords = ["scheduler", "testing", "proc-macro"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
