[package]
name = "scx-ktstr"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal BPF scheduler for ktstr integration tests"
keywords = ["sched_ext", "scheduler", "bpf"]
categories = ["development-tools::testing"]

[dependencies]
anyhow = "1"
ctrlc = "3"
libbpf-rs = "0.26"
scx_utils = "1.1.0"

[build-dependencies]
scx_cargo = "1.1.0"
