[package]
name = "stt-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "GPL-2.0-only"
repository = "https://github.com/likewhatevs/stt"
description = "Proc macro for stt #[stt_test] attribute"
keywords = ["scheduler", "testing", "proc-macro"]
categories = ["development-tools::testing"]
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
